--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/cobyism/ghost-on-heroku.git"
+    "url": "https://git.heroku.com/johnzaccone.git"
   },
   "bugs": "https://github.com/TryGhost/Ghost/issues",
   "private": true,
